foundation-objs/main/default/objects/EmailMessage/fields/Jira_Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>Jira_Comment_Id__c</fullName>
    <label>Jira Comment Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>