foundation-objs/main/default/objects/EmailMessage/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>General Query</fullName>
            </value>
            <value>
                <fullName>Due Diligence Questionnaire</fullName>
            </value>
            <value>
                <fullName>Presale Technical Query</fullName>
            </value>
            <value>
                <fullName>Presale General Query</fullName>
            </value>
            <value>
                <fullName>Project Requirement</fullName>
            </value>
            <value>
                <fullName>Project Change Request</fullName>
            </value>
            <value>
                <fullName>Implementation Support</fullName>
            </value>
            <value>
                <fullName>Post go-live support</fullName>
            </value>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Incident of problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>